guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: docker.io/ibmcom/guestbook:v2
        name: guestbook-ui
        ports:
        - containerPort: 80
