guestbook/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web
  namespace: test1
spec:
  to:
    kind: Service
    name: guestbook-ui
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
